[package]
name = "eow_words_quiz"
version = "0.1.0"
description = "A quizzer of what words or statements mean by using an EOW tsv file(https://eow.alc.co.jp/)"
authors = ["fugashy <fugashy@icloud.com>"]
edition = "2018"
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/fugashy/eow_words_quiz.git"

[dependencies]
csv = "1.1"
rand = "0.3.14"
subprocess = "0.2.4"
